# tca-rust-sharing-instant

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  demo.html  live_sync.html  oxidize.md  progress.md  tasks.md
artifacts/v0.1.0/: SRS.md
crates/sharing-instant/: Cargo.toml
crates/sharing-instant-macros/: Cargo.toml
crates/sharing-instant-macros/src/: lib.rs
crates/sharing-instant-test/: Cargo.toml
crates/sharing-instant-test/src/: lib.rs
crates/sharing-instant/src/: connection_state.rs  database.rs  error.rs  fetch.rs  fetch_all.rs  fetch_key_request.rs  fetch_one.rs  instant.rs  lib.rs  mutation_callbacks.rs  mutations.rs  operation_state.rs  shared.rs  shared_key.rs  shared_reader.rs  shared_reader_key.rs  subscription.rs  table.rs
crates/sharing-instant/src/auth/: auth_coordinator.rs  auth_state.rs  mod.rs
crates/sharing-instant/src/keys/: file_storage_key.rs  in_memory_key.rs  instant_db_key.rs  mod.rs
crates/sharing-instant/src/rooms/: mod.rs  presence.rs  room.rs
crates/sharing-instant/src/sync/: engine.rs  mod.rs
crates/sharing-instant/src/topics/: mod.rs  topic_channel.rs  topic_event.rs
crates/sharing-instant/tests/: app_lifecycle_tests.rs  auth_lifecycle_tests.rs  auth_state_tests.rs  change_tracker_tests.rs  conflict_tests.rs  connection_state_tests.rs  database_tests.rs  date_tests.rs  default_tests.rs  demo_tests.rs  entity_type_tests.rs  ephemeral_integration_tests.rs  equatable_tests.rs  error_tests.rs  fetch_all_tests.rs  fetch_changes_tests.rs  fetch_one_tests.rs  fetch_tests.rs  file_storage_tests.rs  in_memory_key_tests.rs  instant_db_tests.rs  integration_tests.rs  is_loading_tests.rs  link_constraint_tests.rs  link_ordering_tests.rs  live_database_tests.rs  metadata_tests.rs  mutation_callbacks_tests.rs  mutations_tests.rs  operation_state_tests.rs  presence_tests.rs  publish_handle_tests.rs  publisher_tests.rs  reactive_trigger_tests.rs  reference_violation_tests.rs  schema_change_tests.rs  schema_validation_tests.rs  shared_tests.rs  sharing_tests.rs  subscription_lifecycle_tests.rs  (+5 more)
crates/trinity/: Cargo.toml
crates/trinity/src/: main.rs
examples/auth_demo/: Cargo.toml
examples/auth_demo/src/: main.rs
examples/avatar_stack/: Cargo.toml
examples/avatar_stack/src/: main.rs
examples/counter_sync/: Cargo.toml
examples/counter_sync/src/: main.rs
examples/cursors/: Cargo.toml
examples/cursors/src/: main.rs
examples/live_sync/: Cargo.toml
examples/live_sync/src/: main.rs
examples/live_sync/tests/: live_sync_tests.rs
examples/merge_tiles/: Cargo.toml
examples/merge_tiles/src/: main.rs
examples/reactions/: Cargo.toml
examples/reactions/src/: main.rs
examples/recipe_utils/: Cargo.toml
examples/recipe_utils/src/: lib.rs
examples/showcase/: Cargo.toml
examples/showcase/src/: main.rs
examples/todos/: Cargo.toml
examples/todos/src/: main.rs
examples/typing_indicator/: Cargo.toml
examples/typing_indicator/src/: main.rs
