[package]
name = "live-sync-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "live-sync"
path = "src/main.rs"

[dependencies]
sharing-instant = { path = "../../crates/sharing-instant" }
instant-admin = { workspace = true }
instant-client = { workspace = true }
instant-core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
