[package]
name = "merge-tiles"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "merge-tiles"
path = "src/main.rs"

[dependencies]
recipe-utils = { path = "../recipe_utils" }
instant-client = { workspace = true }
instant-core = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
